fixing description overflow on desktop, fake-responsive font sizing

--- a/src/app/item-list/item-list.component.scss
+++ b/src/app/item-list/item-list.component.scss
@@ -23,6 +23,11 @@
 
 .item-name {
     font-size: 1.2rem;
+    word-wrap: break-word;
+}
+
+.item-name.big-name {
+    font-size: .8rem;
 }
 
 .estimated-worth {
@@ -34,9 +39,13 @@
     position: relative;
 }
 
-.item-list-wrapper mat-card {
+.item-list-wrapper.mobile mat-card {
     margin-bottom: 15px;
 }
+
+// .item-list-wrapper mat-card.item-card .mat-card-content {
+//     width: 70%;
+// }
 
 .item-list-wrapper mat-card img {
     height: 20%;
@@ -53,11 +62,18 @@
 
 .item-list-item {
     position: relative;
+    min-height: 417.5px;
     max-height: 417.5px;
 }
 
-.item-list-item.mobile mat-card.item-card {
+
+.item-list-item.opened {
+    max-height: none;
+}
+
+.item-list-item.mobile mat-card.mat-card.item-card {
     min-width: 270px;
+    max-width: 270px;
 }
 
 .item-list-item .item-edit-button {
